argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: argocd-http
  labels:
    app: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - argo.corbe.net
      secretName: argo-tls
  rules:
  - host: argo.corbe.net
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: argocd-server
              port:
                number: 80
