locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  labels:
    app: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: locust
spec:
  selector:
    app: locust
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: locust
spec:
  rules:
  - host: locust.corbe.net
    http:
      paths:
      - backend:
          serviceName: locust
          servicePort: 80
